# stilio

./: docker-compose.yml  env-example  pyproject.toml  requirements.txt
docker/crawler/: Dockerfile  entrypoint.sh
docker/persistence/: Dockerfile  my.cnf
stilio/: config.py
stilio/crawler/dht/: crawling.py
stilio/persistence/: database.py  populate.py  utils.py
stilio/persistence/torrents/: models.py
